--- a/build.default.properties
+++ b/build.default.properties
@@ -8,7 +8,7 @@
 #--------------------------------------------------------------------------------
 
 # ---- Module Release Settings --------------------------------------------------
-release.version = 1.1.0-beta7
+release.version = 1.1.0-rc1
 release.name = Iron Knight
 
 # ---- PHPCPD Settings ----------------------------------------------------------
