Allow location merging from container.xml

--- a/build.xml
+++ b/build.xml
@@ -101,6 +101,7 @@
                 <include name="var/**/*" />
                 <include name="tests/**/*" />
                 <include name="webapps/**/*" />
+                <include name="internal/**/*" />
                 <include name="resources/**/*" />
                 <include name="server.php" />
                 <include name="appserver.php" />
