--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
 		"appserver-io-psr/servlet" : "~1.0",
 		"appserver-io-psr/deployment" : "~1.0",
 		"appserver-io-psr/application" : "~1.0",
+        "appserver-io-psr/security" : "~1.0",
 		"appserver-io/rmi" : "~1.0",
 		"appserver-io/http" : "~1.0",
 		"appserver-io/lang" : "~1.0",
