--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,7 @@ github_username:  appserver-io
 github_repository: https://github.com/appserver-io/appserver
 github_gitter: https://gitter.im/appserver-io/appserver
 github_issue: https://github.com/appserver-io/appserver/issues/
+github_milestones: https://github.com/appserver-io/appserver/milestones/
 
 google_analytics_id: UA-42386171-1
 
