Fixed PSR-2 errors

--- a/build.default.properties
+++ b/build.default.properties
@@ -8,8 +8,8 @@
 #--------------------------------------------------------------------------------
 
 # ---- Module Release Settings --------------------------------------------------
-release.version = 1.2.0
-release.name = Iron Knight
+release.version = 1.2.0-alpha1
+release.name = Iron Dragon
 
 # ---- PHPCPD Settings ----------------------------------------------------------
 # Directories
