Fixed PHPCPD errors

--- a/build.default.properties
+++ b/build.default.properties
@@ -14,7 +14,7 @@ release.name = Iron Dragon
 # ---- PHPCPD Settings ----------------------------------------------------------
 # Directories
 phpcpd-exclude.dir = --exclude AppserverIo/Appserver/PersistentServletEngine
-phpcpd-exclude.names = --names-exclude=NamingDirectoryImpl.php
+phpcpd-exclude.names = --names-exclude=NamingDirectoryImpl.php,DeploymentDescriptorParser.php,DirectoryParser.php
 phpcpd-additional.args = ${phpcpd-exclude.dir} ${phpcpd-exclude.names}
 
 # ---- PHPCS Settings -----------------------------------------------------------
