--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,8 @@ appserver_download_baseurl: https://github.com/appserver-io/appserver/releases/d
 appserver_download_dist_prefix: appserver-dist
 appserver_download_runtime_prefix: appserver-runtime
 
+appserver_site_contact: /about/contact.html
+
 markdown: redcarpet
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
