Minor refactoring authentication process

--- a/build.default.properties
+++ b/build.default.properties
@@ -8,8 +8,8 @@
 #--------------------------------------------------------------------------------
 
 # ---- Module Release Settings --------------------------------------------------
-release.version = 1.2.0-alpha3
-release.name = Iron Dragon
+release.version = 1.1.1-alpha1
+release.name = Iron Knight
 
 # ---- PHPCPD Settings ----------------------------------------------------------
 # Directories
