Add experimental blackfire.io support

--- a/build.default.properties
+++ b/build.default.properties
@@ -8,8 +8,12 @@
 #--------------------------------------------------------------------------------
 
 # ---- Module Release Settings --------------------------------------------------
-release.version = 1.1.1-alpha2
+release.version = 1.1.1-alpha3
 release.name = Iron Knight
+
+# ---- blackfire.io Settings ----------------------------------------------------
+blackfire-io.client-id = <your-blackfire.io-client-id>
+blackfire-io.client-token = <your-blackfire.io-client-token>
 
 # ---- PHPCPD Settings ----------------------------------------------------------
 # Directories
