--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,13 @@
 		"appserver-io/rmi" : "~2.0",
 		"appserver-io/http" : "~2.0",
 		"appserver-io/lang" : "~1.0",
-		"appserver-io/server" : "~5.0",
+		"appserver-io/server" : "~6.0",
 		"appserver-io/logger" : "~1.0",
 		"appserver-io/storage" : "~2.0",
 		"appserver-io/messaging" : "~1.0",
 		"appserver-io/microcron" : "~1.0",
 		"appserver-io/webserver" : "~4.0",
+		"appserver-io/dnsserver" : "~1.0",
 		"appserver-io/properties" : "~1.0",
 		"appserver-io/concurrency" : "0.3.*",
 		"appserver-io/description" : "~5.0",
