Fix for change in Composer workflow, referenced by issue [#5070](composer/composer#5070)

--- a/composer.json
+++ b/composer.json
@@ -75,6 +75,9 @@
 	"scripts" : {
 		"post-install-cmd" : [
 			"AppserverIo\\Appserver\\Meta\\Composer\\Script\\Setup::postInstall"
+		],
+		"post-update-cmd" : [
+			"AppserverIo\\Appserver\\Meta\\Composer\\Script\\Setup::postUpdate"
 		]
 	}
 }
