--- a/etc/supervisor/conf.d/supervisord.conf
+++ b/etc/supervisor/conf.d/supervisord.conf
@@ -6,15 +6,27 @@ directory = /opt/appserver
 command = bin/php -dappserver.php_sapi=appserver -f /opt/appserver/server.php
 user = root
 autostart = true
+stdout_events_enabled=true
+stderr_events_enabled=true
 
 [program:appserver-php5-fpm]
 directory = /opt/appserver
 command = sbin/php-fpm -F --php-ini /opt/appserver/etc/php-fpm-fcgi.ini --fpm-config /opt/appserver/etc/php-fpm.conf
 user = root
 autostart = true
+stdout_events_enabled=true
+stderr_events_enabled=true
 
 [program:appserver-watcher]
 directory = /opt/appserver
 command = bin/php -dappserver.php_sapi=appserver -f /opt/appserver/server.php -- -w
 user = root
 autostart = true
+stdout_events_enabled=true
+stderr_events_enabled=true
+
+[eventlistener:stdout]
+command = supervisor_stdout
+buffer_size = 10
+events = PROCESS_LOG
+result_handler = supervisor_stdout:event_handler
