Add runner mode enabling a node.JS style usability

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@
 /bin
 /sbin
 /etc/appserver/appserver.xml
+/etc/appserver/appserver-runner.xml
 /etc/appserver/appserver-failover.xml
 /etc/appserver/server.pem
 /var/tmp/example
