--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,16 @@
         "php": ">=5.4.0",
         "rhumsaa/uuid": "~2.4",
         "react/socket": "~0.4",
+        "react/socket-client": "0.5.0",
         "doctrine/orm": "2.5.*",
         "league/event": "2.1.*",
         "crunch/fastcgi" : "2.x-dev",
+        "appserver-io-psr/di": "~2.0",
         "appserver-io-psr/epb": "~3.0",
         "appserver-io-psr/pms": "~1.0",
         "appserver-io-psr/mop": "~1.0",
         "appserver-io-psr/naming": "~1.0",
-        "appserver-io-psr/servlet": "~2.0",
+        "appserver-io-psr/servlet": "~3.0",
         "appserver-io-psr/deployment": "~1.0",
         "appserver-io-psr/application": "~1.0",
         "appserver-io-psr/security": "~1.0",
@@ -22,7 +24,7 @@
         "appserver-io/http": "~2.0",
         "appserver-io/lang": "~1.0",
         "appserver-io/logger": "~1.0",
-        "appserver-io/routlt": "2.2.0-beta1",
+        "appserver-io/routlt": "2.2.0-beta3",
         "appserver-io/storage": "~2.0",
         "appserver-io/messaging": "~2.0",
         "appserver-io/microcron": "~1.0",
