--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/orm": "2.5.*",
         "league/event": "2.1.*",
         "crunch/fastcgi" : "2.x-dev",
+        "zendframework/zend-diactoros" : "~1.0",
         "appserver-io-psr/di": "~2.0",
         "appserver-io-psr/epb": "~3.0",
         "appserver-io-psr/pms": "~1.0",
