Add livesystem files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,23 @@
 .DS_Store
 /target
 /instance-src
+/include
+/lib
+/etc/conf.d
+/etc/pear.conf
+/etc/php-fpm*
+/etc/php.ini
+/man
+/php
+/share
+/ssl
 /vendor
 /webapps
 /deploy/*.phar*
 /tmp
 /var/log
-/var/tmp/example
+/var/run
+/var/tmp/localhost
 /build.properties
 /composer.lock
 /composer.phar
