--- a/build.default.properties
+++ b/build.default.properties
@@ -1,22 +1,22 @@
-#--------------------------------------------------------------------------------
-# appserver-io/appserver Build Default Properties
-#
-# @copyright  	Copyright (c) 2010 <info@techdivision.com> - TechDivision GmbH
-# @license    	http://opensource.org/licenses/osl-3.0.php
-#               Open Software License (OSL 3.0)
-# @author       TechDivision GmbH - Core Team <core@techdivision.com>
-#--------------------------------------------------------------------------------
+;--------------------------------------------------------------------------------
+; appserver-io/appserver Build Default Properties
+;
+; @copyright  	Copyright (c) 2010 <info@techdivision.com> - TechDivision GmbH
+; @license    	http://opensource.org/licenses/osl-3.0.php
+;               Open Software License (OSL 3.0)
+; @author       TechDivision GmbH - Core Team <core@techdivision.com>
+;--------------------------------------------------------------------------------
 
-# ---- Module Release Settings --------------------------------------------------
+; ---- Module Release Settings --------------------------------------------------
 release.version = 1.1.4-beta10
 release.name = Iron Knight
 
-# ---- PHPCPD Settings ----------------------------------------------------------
-# Directories
+; ---- PHPCPD Settings ----------------------------------------------------------
+; Directories
 phpcpd-exclude.dir = --exclude AppserverIo/Appserver/PersistentServletEngine
 phpcpd-exclude.names = --names-exclude=NamingDirectoryImpl.php,DeploymentDescriptorParser.php,DirectoryParser.php
 phpcpd-additional.args = ${phpcpd-exclude.dir} ${phpcpd-exclude.names}
 
-# ---- PHPCS Settings -----------------------------------------------------------
-# can be overwritten locally
+; ---- PHPCS Settings -----------------------------------------------------------
+; can be overwritten locally
 phpcs-additional.args = --ignore=server.php,bootstrap.php,webapps,var/scripts/bootstrap.php
