--- a/build.default.properties
+++ b/build.default.properties
@@ -8,7 +8,7 @@
 ;--------------------------------------------------------------------------------
 
 ; ---- Module Release Settings --------------------------------------------------
-release.version = 1.1.4-beta10
+release.version = 1.1.5-alpha1
 release.name = Iron Knight
 
 ; ---- PHPCPD Settings ----------------------------------------------------------
