Add functionality to inject beans

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,6 @@
     "license": "OSL-3.0",
     "require": {
         "php": ">=5.4.0",
-        "psr/container": "1.0.0",
         "rhumsaa/uuid": "~2.4",
         "react/dns": "0.4.4",
         "react/socket": "0.4.*",
@@ -19,13 +18,13 @@
         "appserver-io-psr/mop": "~1.0",
         "appserver-io-psr/auth": "~2.0",
         "appserver-io-psr/naming": "~1.0",
-        "appserver-io-psr/servlet": "~3.0",
+        "appserver-io-psr/servlet": "dev-di as 3.0.0",
         "appserver-io-psr/deployment": "~1.0",
         "appserver-io-psr/application": "~1.0",
         "appserver-io-psr/security": "~1.0",
         "appserver-io/rmi": "~3.0",
         "appserver-io/http": "~2.0",
-        "appserver-io/lang": "~1.0",
+        "appserver-io/lang": "3.0.0 as 1.0.1",
         "appserver-io/logger": "~1.0",
         "appserver-io/routlt": "2.2.0-beta3",
         "appserver-io/storage": "~2.0",
