--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "homepage": "https://github.com/appserver-io/appserver",
     "license": "OSL-3.0",
     "require": {
-        "php": ">=5.4.0",
+        "php": ">=5.5.0 < 7.0.0",
         "rhumsaa/uuid": "~2.4",
         "react/dns": "0.4.4",
         "react/socket": "0.4.*",
@@ -28,7 +28,7 @@
         "appserver-io/lang": "1.0.*",
         "appserver-io/logger": "1.0.*",
         "appserver-io/routlt": "2.2.0-beta3",
-        "appserver-io/storage": "2.1.*",
+        "appserver-io/storage": "2.0.*",
         "appserver-io/messaging": "2.0.*",
         "appserver-io/microcron": "1.0.*",
         "appserver-io/webserver": "5.1.*",
