--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "appserver-io-psr/di": "dev-di as 2.0.0",
         "appserver-io-psr/epb": "dev-di as 3.0.0",
         "appserver-io-psr/pms": "~1.0",
-        "appserver-io-psr/mop": "~1.0",
+        "appserver-io-psr/mop": "dev-di as 1.1.0",
         "appserver-io-psr/auth": "~2.0",
         "appserver-io-psr/naming": "~1.0",
         "appserver-io-psr/servlet": "dev-di as 3.0.0",
@@ -26,9 +26,9 @@
         "appserver-io/http": "~2.0",
         "appserver-io/lang": "3.0.0 as 1.0.1",
         "appserver-io/logger": "~1.0",
-        "appserver-io/routlt": "2.2.0-beta3",
+        "appserver-io/routlt": "dev-di as 2.2.0-beta3",
         "appserver-io/storage": "~2.0",
-        "appserver-io/messaging": "dev-di",
+        "appserver-io/messaging": "dev-di as 2.0.1",
         "appserver-io/microcron": "~1.0",
         "appserver-io/webserver": "~5.0",
         "appserver-io/dnsserver": "~2.0",
@@ -36,7 +36,7 @@
         "appserver-io/properties": "~2.0",
         "appserver-io/concurrency": "0.3.*",
         "appserver-io/robo-tasks": "~0.1",
-        "appserver-io/description": "~7.0",
+        "appserver-io/description": "dev-di as 7.0.0",
         "appserver-io/authenticator": "~1.0",
         "appserver-io/configuration": "~2.0",
         "appserver-io/doppelgaenger": "~1.0",
