--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,12 @@
         "appserver-io-psr/pms": "1.0.*",
         "appserver-io-psr/mop": "dev-di as 1.1.0",
         "appserver-io-psr/auth": "2.0.*",
-        "appserver-io-psr/naming": "1.0.*",
+        "appserver-io-psr/naming": "dev-di as 1.1.0",
         "appserver-io-psr/servlet": "dev-di as 3.0.0",
         "appserver-io-psr/deployment": "1.1.*",
         "appserver-io-psr/application": "1.3.*",
         "appserver-io-psr/security": "1.4.*",
-        "appserver-io/rmi": "3.1.*",
+        "appserver-io/rmi": "dev-di as 3.1.2",
         "appserver-io/http": "2.2.*",
         "appserver-io/lang": "3.0.0 as 1.0.1",
         "appserver-io/logger": "1.0.*",
