Remove crunch/fastcgi and replace with appserver-io/fastcgi

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,6 @@
         "react/socket-client": "0.5.0",
         "doctrine/orm": "2.5.*",
         "league/event": "2.1.*",
-        "crunch/fastcgi" : "2.x-dev",
         "zendframework/zend-diactoros" : "~1.0",
         "appserver-io-psr/di": "dev-di as 2.0.0",
         "appserver-io-psr/epb": "dev-di as 4.0.0",
@@ -23,6 +22,7 @@
         "appserver-io-psr/deployment": "dev-di as 1.1.0",
         "appserver-io-psr/application": "1.4.*",
         "appserver-io-psr/security": "1.4.*",
+        "appserver-io/fastcgi" : "2.x-dev as 1.0.1",
         "appserver-io/rmi": "dev-di as 3.1.2",
         "appserver-io/http": "2.2.*",
         "appserver-io/lang": "3.0.0 as 1.0.1",
