--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "react/socket-client": "0.5.0",
         "doctrine/orm": "2.5.*",
         "league/event": "2.1.*",
+        "symfony/var-dumper": "3.4.x-dev",
         "zendframework/zend-diactoros" : "~1.0",
         "appserver-io-psr/di": "dev-di as 2.0.0",
         "appserver-io-psr/epb": "dev-di as 4.0.0",
@@ -44,11 +45,7 @@
         "appserver-io/routlt-project": "1.2.*"
     },
     "require-dev": {
-        "mikey179/vfsStream": "1.*",
-        "appserver-io/build": "~1.0",
-        "consolidation/robo": "~1.0",
-        "henrikbjorn/lurker" : "~1.0",
-        "appserver-io/pthreads-polyfill": "~1.0"
+        "appserver-io/build": "~1.0"
     },
     "autoload": {
         "psr-0": {
