--- a/composer.json
+++ b/composer.json
@@ -13,32 +13,32 @@
         "league/event": "2.1.*",
         "symfony/var-dumper": "3.4.x-dev",
         "zendframework/zend-diactoros" : "~1.0",
-        "appserver-io-psr/di": "dev-di as 2.0.0",
-        "appserver-io-psr/epb": "dev-di as 4.0.0",
+        "appserver-io-psr/di": "3.0.*",
+        "appserver-io-psr/epb": "5.0.*",
         "appserver-io-psr/pms": "1.0.*",
-        "appserver-io-psr/mop": "dev-di as 1.2.0",
+        "appserver-io-psr/mop": "1.2.*",
         "appserver-io-psr/auth": "2.0.*",
-        "appserver-io-psr/naming": "dev-di as 1.1.0",
-        "appserver-io-psr/servlet": "dev-di as 3.0.0",
-        "appserver-io-psr/deployment": "dev-di as 1.1.0",
+        "appserver-io-psr/naming": "1.1.*",
+        "appserver-io-psr/servlet": "3.2.*",
+        "appserver-io-psr/deployment": "2.0.*",
         "appserver-io-psr/application": "1.4.*",
         "appserver-io-psr/security": "1.4.*",
         "appserver-io/fastcgi" : "2.x-dev as 1.0.1",
-        "appserver-io/rmi": "dev-di as 3.1.2",
+        "appserver-io/rmi": "3.2.*",
         "appserver-io/http": "2.2.*",
-        "appserver-io/lang": "3.0.0 as 1.0.1",
+        "appserver-io/lang": "3.0.*",
         "appserver-io/logger": "1.0.*",
-        "appserver-io/routlt": "dev-di as 2.2.0-beta5",
+        "appserver-io/routlt": "2.2.0-beta6",
         "appserver-io/storage": "2.0.*",
-        "appserver-io/messaging": "dev-di as 2.0.1",
+        "appserver-io/messaging": "3.0.*",
         "appserver-io/microcron": "1.0.*",
         "appserver-io/webserver": "5.1.*",
         "appserver-io/dnsserver": "2.0.*",
         "appserver-io/single-app": "3.0.*",
-        "appserver-io/properties": "2.0.*",
+        "appserver-io/properties": "2.1.*",
         "appserver-io/concurrency": "0.3.*",
         "appserver-io/robo-tasks": "0.2.*",
-        "appserver-io/description": "dev-di as 7.0.1",
+        "appserver-io/description": "8.0.*",
         "appserver-io/authenticator": "1.0.*",
         "appserver-io/configuration": "2.0.*",
         "appserver-io/doppelgaenger": "1.7.*",
