--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
         "react/socket-client": "0.5.0",
         "doctrine/orm": "2.5.*",
         "league/event": "2.1.*",
-        "symfony/var-dumper": "3.4.x-dev",
-        "zendframework/zend-diactoros" : "~1.0",
+        "symfony/var-dumper": "3.4.*",
+        "zendframework/zend-diactoros" : "1.7.*",
         "appserver-io-psr/di": "3.0.*",
         "appserver-io-psr/epb": "5.0.*",
         "appserver-io-psr/pms": "1.0.*",
@@ -23,7 +23,7 @@
         "appserver-io-psr/deployment": "2.0.*",
         "appserver-io-psr/application": "1.4.*",
         "appserver-io-psr/security": "1.4.*",
-        "appserver-io/fastcgi" : "2.x-dev as 1.0.1",
+        "appserver-io/fastcgi" : "2.0.*",
         "appserver-io/rmi": "3.2.*",
         "appserver-io/http": "2.2.*",
         "appserver-io/lang": "3.0.*",
