Integrate Doctrine ORM, DBAL and Migrations console commands + Extend DI functionality for method invocation on instanciated objects

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "doctrine/orm": "2.5.*",
         "doctrine/migrations" : "1.5.0",
         "league/event": "2.1.*",
-        "symfony/var-dumper": "3.4.*",
+        "symfony/var-dumper": "3.4.7",
         "zendframework/zend-diactoros" : "1.4.*",
         "appserver-io-psr/di": "3.0.*",
         "appserver-io-psr/epb": "5.0.*",
@@ -21,15 +21,16 @@
         "appserver-io-psr/auth": "2.0.*",
         "appserver-io-psr/naming": "1.1.*",
         "appserver-io-psr/servlet": "3.2.*",
+        "appserver-io-psr/security": "1.4.*",
         "appserver-io-psr/deployment": "2.0.*",
         "appserver-io-psr/application": "1.4.*",
-        "appserver-io-psr/security": "1.4.*",
-        "appserver-io/fastcgi" : "2.0.*",
         "appserver-io/rmi": "3.2.*",
         "appserver-io/http": "2.2.*",
         "appserver-io/lang": "3.0.*",
         "appserver-io/logger": "1.0.*",
-        "appserver-io/routlt": "2.2.0-beta7",
+        "appserver-io/fastcgi" : "2.0.*",
+        "appserver-io/routlt": "2.2.0-beta9",
+        "appserver-io/console": "1.0.*",
         "appserver-io/storage": "2.0.*",
         "appserver-io/messaging": "3.0.*",
         "appserver-io/microcron": "1.0.*",
@@ -39,9 +40,9 @@
         "appserver-io/properties": "2.1.*",
         "appserver-io/concurrency": "0.3.*",
         "appserver-io/robo-tasks": "0.2.*",
-        "appserver-io/description": "8.0.*",
+        "appserver-io/description": "9.0.*",
         "appserver-io/authenticator": "1.0.*",
-        "appserver-io/configuration": "2.0.*",
+        "appserver-io/configuration": "3.0.*",
         "appserver-io/doppelgaenger": "1.7.*",
         "appserver-io/routlt-project": "1.2.*"
     },
