Switch to appserver-io/console 3.0 to add command to load Doctrine Fixtures + Temporary persist entity manager names in PersistenceManager instance to allow loading an applications default entity manager by name

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "react/socket": "0.4.*",
         "react/socket-client": "0.5.0",
         "doctrine/orm": "2.5.*",
+        "doctrine/doctrine-fixtures-bundle" : "2.4.1",
         "league/event": "2.1.*",
         "symfony/var-dumper": "3.4.7",
         "zendframework/zend-diactoros" : "1.4.*",
@@ -29,7 +30,7 @@
         "appserver-io/logger": "1.0.*",
         "appserver-io/fastcgi" : "2.0.*",
         "appserver-io/routlt": "2.2.0-beta9",
-        "appserver-io/console": "2.0.*",
+        "appserver-io/console": "3.0.*",
         "appserver-io/storage": "2.0.*",
         "appserver-io/messaging": "3.0.*",
         "appserver-io/microcron": "1.0.*",
