Add PHP configuration file for Travis-CI to break memory limit

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
   - wget https://scrutinizer-ci.com/ocular.phar
 
 before_script:
-  - phpenv config-add travis.php.ini
+  - phpenv config-add .travis.php.ini
 
 script:
   - composer update
