--- a/build.default.properties
+++ b/build.default.properties
@@ -8,7 +8,7 @@
 ;--------------------------------------------------------------------------------
 
 ; ---- Module Release Settings --------------------------------------------------
-release.version = 1.1.5-beta12
+release.version = 1.1.5
 release.name = Iron Knight
 
 ; ---- PHPCPD Settings ----------------------------------------------------------
