--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "appserver-io/lang": "3.0.*",
         "appserver-io/logger": "1.0.*",
         "appserver-io/fastcgi" : "2.0.*",
-        "appserver-io/routlt": "2.2.0",
+        "appserver-io/routlt": "2.2.*",
         "appserver-io/storage": "2.0.*",
         "appserver-io/messaging": "3.0.*",
         "appserver-io/microcron": "1.0.*",
