Add Doctrine like LDAP integration (see https://github.com/appserver-io/ldap)

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "react/socket-client": "0.5.0",
         "doctrine/orm": "2.5.*",
         "league/event": "2.1.*",
+        "symfony/ldap": "3.4.7",
         "symfony/var-dumper": "3.4.7",
         "zendframework/zend-diactoros" : "1.4.*",
         "appserver-io-psr/di": "3.0.*",
@@ -28,6 +29,7 @@
         "appserver-io/rmi": "3.2.*",
         "appserver-io/http": "2.2.*",
         "appserver-io/lang": "3.0.*",
+        "appserver-io/ldap": "2.0.*",
         "appserver-io/logger": "2.0.*",
         "appserver-io/fastcgi" : "2.0.*",
         "appserver-io/storage": "2.0.*",
