--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
         "appserver-io/routlt-project": "1.2.*"
     },
     "require-dev": {
-        "appserver-io/build": "~1.0"
+        "appserver-io/build": "~1.0",
+        "appserver-io-dist/osx": "dev-master"
     },
     "autoload": {
         "psr-0": {
