--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ matrix:
   include:
     - os: osx
       osx_image: xcode6.4
-      php: 5.6
+      language: ruby
       before_install:
         - brew update
         - brew install ant
