--- a/.travis.yml
+++ b/.travis.yml
@@ -21,17 +21,14 @@ env:
 
 matrix:
   include:
-    - os: osx
-      osx_image: xcode6.4
-      language: ruby
+    - os: linux
+      php: 5.6
+      env: OS_FAMILY = mac
       before_install:
-        - brew update
-        - brew install ant
-        - wget https://getcomposer.org/composer.phar
-        - sudo curl -s http://php-osx.liip.ch/install.sh | bash -s 5.6
+        - apt-get update;
+        - apt-get install -y ant git;
       script:
-        - php -d memory_limit=-1 composer.phar install
-        - sudo chown $USER /opt
+        - composer install
         - ant dependencies-init -f vendor/appserver-io-dist/osx/build.xml
         - ant local-build -Dos.family=mac -f vendor/appserver-io-dist/osx/build.xml
         - mv vendor/appserver-io-dist/osx/build/* build/
@@ -39,6 +36,7 @@ matrix:
     - os: linux
       dist: xenial
       php: 5.6
+      env: OS_FAMILY = linux
       services:
         - docker
       script:
