--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,8 @@
     },
     "require-dev": {
         "appserver-io/build": "~1.0",
-        "appserver-io-dist/osx": "dev-master"
+        "appserver-io-dist/osx": "dev-master",
+        "appserver-io-dist/debian": "dev-master"
     },
     "autoload": {
         "psr-0": {
