Introducing macos builds and hoping the world does not explode

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,24 +21,24 @@ env:
 
 matrix:
   include:
-    - os: linux
-      php: 5.6
+    - os: osx
+      osx_image: xcode8
       env: OS_FAMILY = mac
-      before_script:
-        - sudo apt-get update;
-        - sudo apt-get install -y ant git;
       script:
         - echo "macos"
+        - php -v
     - os: linux
       dist: xenial
       php: 5.6
-      env: OS_FAMILY = linux
+      env:
+        - OS_FAMILY = linux
+        - OS_DISTRO = debian
       services:
         - docker
       script:
         - mkdir -p build
         - composer install
-        - docker run --rm -v `pwd`:/build -w /build debian:9 bash -c "apt-get update; apt-get install -y ant git php; ant dependencies-init -f vendor/appserver-io-dist/debian/build.xml; ant local-build -Dbuild.number=$BUILD_NUMBER -Dtarget-os.major.version=9 -Dtarget-os.minor.version=9 -f vendor/appserver-io-dist/debian/build.xml;"
+        - docker run --rm -v `pwd`:/build -w /build debian:9 bash -c "apt-get update; apt-get install -y ant git php; ant dependencies-init -f vendor/appserver-io-dist/debian/build.xml; ant local-build -Dbuild.number=$BUILD_NUMBER -Dtarget-os.major.version=9 -Dtarget-os.minor.version=9 -f vendor/appserver-io-dist/debian/build.xml; chmod -R 777 vendor/appserver-io-dist/debian/build"
         - mv vendor/appserver-io-dist/debian/build/* build/
         - if [[ "$TRAVIS_TAG" ]]; then echo "TAGGED"; fi
   allow_failures:
