--- a/composer.json
+++ b/composer.json
@@ -50,8 +50,7 @@
     },
     "require-dev": {
         "appserver-io/build": "~1.0",
-        "appserver-io-dist/osx": "dev-master",
-        "appserver-io-dist/debian": "dev-travis-debian-build"
+        "appserver-io-dist/debian": "dev-master"
     },
     "autoload": {
         "psr-0": {
@@ -96,11 +95,5 @@
         "post-update-cmd": [
             "AppserverIo\\Appserver\\Meta\\Composer\\Script\\Setup::postUpdate"
         ]
-    },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/wick-ed/debian"
-        }
-    ]
+    }
 }
